# hark

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  compose.gpu.yaml  compose.yaml  docker-entrypoint.sh  feeds.txt  pyproject.toml
.github/workflows/: lint.yml  test.yml  typecheck.yml
docs/: PLAN.md
scripts/: build-image.sh
src/hark/: __init__.py  alert.py  audio.py  auth.py  chapters.py  claims.py  cli.py  cut.py  dai_probe.py  db.py  detect.py  discover.py  extract.py  gpodder_server.py  hosting.py  ingest.py  llm_budget.py  nextcloud.py  opml.py  orchestrator.py  pipeline.py  podcast_feed.py  queries.py  ratings.py  resolve.py  scoring.py  templates.py  transcribe.py  views.py  web.py  wikidata.py
tests/: conftest.py  test_alert.py  test_audio.py  test_chapters.py  test_claims.py  test_cli.py  test_cut.py  test_dai_probe.py  test_db.py  test_detect.py  test_discover.py  test_extract.py  test_gpodder_server.py  test_hosting.py  test_ingest.py  test_nextcloud.py  test_opml.py  test_orchestrator.py  test_pipeline.py  test_podcast_feed_routes.py  test_ratings.py  test_resolve.py  test_scoring.py  test_transcribe.py  test_web.py  test_wikidata.py
tests/fixtures/: ep1_chapters.json  feed_a.xml  feed_a_updated.xml  itunes_search.json
